--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-Hello, world!
+<!--Allyvia Holland 06-29-25-->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>JavaScript Variable Exercise</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+  <header>
+    <h1>JavaScript Variable Exercise</h1>
+  </header>
+
+  <main>
+    <section>
+      <h2>Questions and Answers</h2>
+      <ol>
+        <li>A variable to store your full name – <code>fullName = "Allyvia Holland"</code></li>
+        <li>A variable to store your desired annual salary – <code>desiredSalary = 250000</code></li>
+        <li>A variable to store your veteran status – <code>isVeteran = false</code></li>
+        <li>An array to store names of three friends – <code>["Amber", "Candance", "Mikey"]</code></li>
+        <li>An array to store the desired salaries of those friends – <code>[60000, 72000, 51000]</code></li>
+        <li>A literal object for another friend – <code>{ firstName: "Carmella", lastName: "Lopez", desiredSalary: 87000 }</code></li>
+      </ol>
+    </section>
+  </main>
+  <script src="js.js"></script>
+</body>
+</html>
