--- a/Javascript2/index.html
+++ b/Javascript2/index.html
@@ -1,4 +1,6 @@
-<!-- Allyvia Holland Project 1 -->
+<!-- Allyvia Holland Javascript 1 -->
+<!-- Modified by Allyvia Holland on Notepad++ -->
+<!-- Original idea: CSS Clock inspired by Wes Bos -->
 <!-- Linked to CSS stylesheet -->
 <!-- Added theme toggle button and digital clock -->
 <!-- Clock numbers and tick marks added -->
@@ -7,7 +9,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Advanced JS + CSS Clock with Numbers</title>
+  <title>JS + CSS Clock with Numbers</title>
   <link rel="icon" href="https://fav.farm/⏰" />
   <link rel="stylesheet" href="styles.css"/>
 </head>
