--- a/Javascript3/index.html
+++ b/Javascript3/index.html
@@ -1,5 +1,7 @@
-<!-- Allyvia Holland Javascript 3-->
-<!-- Linked external stylesheet and Google Font (Pacifico) -->
+<!-- Allyvia Holland Javascript 3 07-15-25-->
+<!-- Modified by Allyvia Holland on Notepad++ -->
+<!-- Original idea: Voicenator inspired by Wes Bos -->
+<!-- Linked CSS and Google Font (Pacifico) -->
 <!-- Added labels with <span> elements to show live rate/pitch values -->
 <!-- Added a "Test Voice" button for voice preview -->
 <!-- Added aria-labels for accessibility and screen reader support -->
