--- a/Javascript2/index.html
+++ b/Javascript2/index.html
@@ -1,4 +1,4 @@
-<!-- Allyvia Holland Javascript 1 -->
+<!-- Allyvia Holland Javascript 1 07-15-25-->
 <!-- Modified by Allyvia Holland on Notepad++ -->
 <!-- Original idea: CSS Clock inspired by Wes Bos -->
 <!-- Linked to CSS stylesheet -->
