--- a/Javascript4/index.html
+++ b/Javascript4/index.html
@@ -1,4 +1,6 @@
 <!-- Allyvia Holland Javascript 5 07-24-25 
+<!-- Original idea: project inspired by Wes Bos -->
+<!-- Modified by Allyvia Holland on Notepad++ -->
   1. JavaScript separated into its own file.
   2. Added mouse drag interaction with cursors.
   5. Removed repetitive item class names for cleaner markup. -->
